[gd_scene load_steps=26 format=2]

[ext_resource path="res://GameOverHUD.gd" type="Script" id=1]
[ext_resource path="res://assets/background/bluemoon.png" type="Texture" id=2]
[ext_resource path="res://WelcomeHUD.gd" type="Script" id=4]
[ext_resource path="res://fonts/minecraft-evenings/Minecraft Evenings.otf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/crackman/crackman.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sounds/bensound-house.wav" type="AudioStream" id=8]
[ext_resource path="res://OptionsHUD.gd" type="Script" id=9]
[ext_resource path="res://DifficultyHUD.gd" type="Script" id=10]
[ext_resource path="res://AudioHUD.gd" type="Script" id=11]
[ext_resource path="res://sounds/error_003.wav" type="AudioStream" id=12]
[ext_resource path="res://Main.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 70
outline_color = Color( 0.968627, 0.980392, 0.980392, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 70
outline_color = Color( 0.968627, 0.980392, 0.980392, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=13]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 20
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 13 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 514.921, 295.778 )
scale = Vector2( 0.567749, 0.567749 )
texture = ExtResource( 2 )

[node name="WelcomeHUD" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="GameName" type="Label" parent="WelcomeHUD"]
modulate = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
margin_left = 380.0
margin_top = 150.0
margin_right = 648.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 1 )
text = "Minion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="WelcomeHUD"]
margin_left = 451.0
margin_top = 287.0
margin_right = 588.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="WelcomeHUD"]
margin_left = 451.031
margin_top = 347.0
margin_right = 588.031
margin_bottom = 391.0
custom_fonts/font = SubResource( 3 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsHUD" type="CanvasLayer" parent="WelcomeHUD"]
script = ExtResource( 9 )

[node name="OptionName" type="Label" parent="WelcomeHUD/OptionsHUD"]
visible = false
modulate = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
margin_left = 366.507
margin_top = 150.0
margin_right = 679.507
margin_bottom = 235.0
custom_fonts/font = SubResource( 4 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyButton" type="Button" parent="WelcomeHUD/OptionsHUD"]
visible = false
margin_left = 450.238
margin_top = 286.679
margin_right = 587.238
margin_bottom = 330.679
custom_fonts/font = SubResource( 5 )
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioButton" type="Button" parent="WelcomeHUD/OptionsHUD"]
visible = false
margin_left = 451.031
margin_top = 347.0
margin_right = 588.031
margin_bottom = 391.0
custom_fonts/font = SubResource( 5 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="WelcomeHUD/OptionsHUD"]
visible = false
margin_left = 451.031
margin_top = 407.321
margin_right = 588.031
margin_bottom = 451.321
custom_fonts/font = SubResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyHUD" type="CanvasLayer" parent="WelcomeHUD/OptionsHUD"]
script = ExtResource( 10 )

[node name="DifficultyLabel" type="Label" parent="WelcomeHUD/OptionsHUD/DifficultyHUD"]
visible = false
margin_left = 312.535
margin_top = 149.364
margin_right = 728.535
margin_bottom = 234.364
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="WelcomeHUD/OptionsHUD/DifficultyHUD"]
visible = false
margin_left = 451.871
margin_top = 269.175
margin_right = 588.871
margin_bottom = 313.175
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.952941, 0.913725, 0.0588235, 1 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="Button" parent="WelcomeHUD/OptionsHUD/DifficultyHUD"]
visible = false
margin_left = 451.463
margin_top = 330.874
margin_right = 588.463
margin_bottom = 374.874
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.168627, 0.698039, 0.278431, 1 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="WelcomeHUD/OptionsHUD/DifficultyHUD"]
visible = false
margin_left = 451.077
margin_top = 393.175
margin_right = 588.077
margin_bottom = 437.175
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.65098, 0.12549, 0.12549, 1 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioHUD" type="CanvasLayer" parent="WelcomeHUD/OptionsHUD"]
script = ExtResource( 11 )

[node name="AudioLabel" type="Label" parent="WelcomeHUD/OptionsHUD/AudioHUD"]
visible = false
margin_left = 405.0
margin_top = 151.0
margin_right = 634.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundSoundBtn" type="Button" parent="WelcomeHUD/OptionsHUD/AudioHUD"]
visible = false
margin_left = 451.463
margin_top = 330.874
margin_right = 593.463
margin_bottom = 374.874
custom_fonts/font = SubResource( 11 )
text = "Background"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButtonAudio" type="Button" parent="WelcomeHUD/OptionsHUD/AudioHUD"]
visible = false
margin_left = 454.206
margin_top = 393.035
margin_right = 591.206
margin_bottom = 437.035
custom_fonts/font = SubResource( 12 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="GamerOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="GameOverHUD" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="GameOver" type="Label" parent="GameOverHUD"]
visible = false
modulate = Color( 0.0361328, 0.0354271, 0.0354271, 1 )
anchor_right = 0.533
margin_left = 320.0
margin_top = 220.0
margin_right = 178.208
margin_bottom = 305.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "game over"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="GameOverHUD"]
visible = false
margin_left = 494.45
margin_top = 343.353
margin_right = 574.45
margin_bottom = 387.353
custom_fonts/font = SubResource( 14 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="WelcomeHUD/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsButton" to="WelcomeHUD" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/DifficultyButton" to="WelcomeHUD/OptionsHUD" method="_on_DifficultyButton_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/AudioButton" to="WelcomeHUD/OptionsHUD" method="_on_AudioButton_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/BackButton" to="WelcomeHUD" method="_on_BackButton_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/DifficultyHUD/Easy" to="WelcomeHUD/OptionsHUD" method="_on_Easy_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/DifficultyHUD/Normal" to="WelcomeHUD/OptionsHUD" method="_on_Normal_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/DifficultyHUD/Hard" to="WelcomeHUD/OptionsHUD" method="_on_Hard_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/AudioHUD/BackgroundSoundBtn" to="WelcomeHUD/OptionsHUD" method="_on_BackgroundSoundBtn_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/AudioHUD/BackButtonAudio" to="WelcomeHUD/OptionsHUD" method="_on_BackButtonAudio_pressed"]
[connection signal="pressed" from="GameOverHUD/Menu" to="." method="_on_Menu_pressed"]
